Mobile user login fix, login css error fix

--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -18,9 +18,14 @@
 
     color: #000000;
 }
-.login{
+
+.login .container-fluid{
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
-    padding-top: 200px;
 }
 .loginWrapper{
     margin: 0 auto;
