--- a/src/styles/Problems.css
+++ b/src/styles/Problems.css
@@ -31,17 +31,21 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: center;
 }
 .card__header {
   color: #0d0d0d;
   font-weight: bold;
   margin-bottom: 10px;
+  font-size: 28px;
+  overflow-wrap: break-word;
 }
 .card__header:hover{
   cursor: pointer;
 }
 .card__text {
   color: #3d3d3d;
+  overflow-wrap: break-word;
 }
 .card__btn {
   display: block;
@@ -76,14 +80,6 @@
   width: 500px;
   margin: 20px auto;
 }
-
-.card__content h1{
-  font-size: xx-large;
-  text-align: center;
-}
-.card__content p{
-  text-align: center;
-}
 .card__sending{
   display: block;
   height: 100%;
@@ -100,7 +96,6 @@
   width: 100%;
   height: 100%;
 }
-
 #popup {
   position: fixed;
   top: 50%;
@@ -114,7 +109,6 @@
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-
 .popupImage {
   display: block;
   max-height: 55%;
@@ -122,7 +116,6 @@
   object-fit: contain;
   border-radius: 20px;
 }
-
 .popupContent{
   display: flex;
   flex-direction: column;
