--- a/src/styles/Problems.css
+++ b/src/styles/Problems.css
@@ -101,17 +101,19 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 9999;
+  z-index: 9990;
   background-color: white;
   border-radius: 20px;
+  min-width: 500px;
   width: 40%;
-  height: 90%;
+  height: 92%;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .popupImage {
   display: block;
-  max-height: 55%;
+  max-height: 50%;
+  max-width: 95%;
   margin: 0 auto;
   object-fit: contain;
   border-radius: 20px;
@@ -153,4 +155,33 @@
 }
 #noProblemsParagraph{
   color: #64748B;
+}
+
+.popupImage:hover, .card__img:hover{
+  cursor: pointer;
+}
+
+#imageBackground{
+  background-color: rgba(128, 128, 128, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9998;
+}
+.bigImage{
+  margin: 0;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 95%;
+  z-index: 9999;
+}
+
+.popupSendingGif{
+  height: 100%;
+  max-width: 100%;
+  object-fit: contain;
 }
