--- a/src/styles/Problems.css
+++ b/src/styles/Problems.css
@@ -194,6 +194,7 @@
   margin: 30px 30px 0 30px;
 }
 .problemsTabButton{
+  background-color: #F1F2FC;
   color: #0D6EFD;
   font-family: 'Readex Pro', sans-serif;
   border: none;
