--- a/src/styles/Marker.css
+++ b/src/styles/Marker.css
@@ -20,6 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 .small{
     width: 45px;
@@ -29,4 +30,93 @@
 }
 .large{
     width: 500px;
+}
+
+.markersTabs{
+    display: flex;
+}
+.markersTabWrapper{
+    display: flex;
+    flex-direction: column;
+    margin: 30px 30px 0 30px;
+}
+.markersTabButton{
+    background-color: #F1F2FC;
+    color: #0D6EFD;
+    font-family: 'Readex Pro', sans-serif;
+    border: none;
+    padding: 0 10px;
+    margin-bottom: 10px;
+}
+.markersTabBorder{
+    border-radius: 3px 3px 0 0;
+    border-top: 3px solid #0D6EFD;
+}
+.notSelectedMarkersTabButton:hover{
+    color: #CED4DA;
+    transition-duration: 200ms;
+}
+
+.marker-dropdown {
+    position: relative;
+    border: none;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
+.marker-dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    z-index: 1;
+    background-color: white;
+}
+.marker-dropdown button{
+    width: 150px;
+    border: 1px solid #CED4DA;
+    padding: 6px;
+    border-radius: 6px;
+    background-color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.marker-dropdown p {
+    margin: 0;
+}
+.marker-dropdown-menu:hover {
+    cursor: pointer;
+}
+.marker-dropdown-element{
+    border: 1px solid #CED4DA;
+    border-top: none;
+    padding: 6px;
+}
+.marker-dropdown-element:hover{
+    background-color: #DDD;
+    transition-duration: 200ms;
+}
+.marker-dropdown-first-element{
+    height: 5px;
+    margin-top: -5px;
+    border-left: 1px solid #CED4DA;
+    border-right: 1px solid #CED4DA;
+}
+.addMarkerWrapper{
+    margin-left: 30px;
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+}
+.markerButton{
+    margin-bottom: 20px;
+}
+.addingMarkerParagraph{
+    padding: 0;
+    color: #64748B;
+}
+.cancelAddingMarkerButton, .addingMarkerParagraph{
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
